tests/auto/qml/qqmlcomponent/qqmlcomponent.pro
@@ -8,6 +8,8 @@ SOURCES += tst_qqmlcomponent.cpp \
 
 HEADERS += ../../shared/testhttpserver.h
 
+RESOURCES += data/QtObjectComponent.qml
+
 include (../../shared/util.pri)
 
 TESTDATA = data/*
